--- a/DOM/ToDo/index.html
+++ b/DOM/ToDo/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>hey</h1>
 
-
-
-
-
-
-    
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
