--- a/DOM/ToDo/index.html
+++ b/DOM/ToDo/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>hey</h1>
+    <h1 id="title">Todo</h1>
     <a href="#" class="basic"></a>
-
+    <ul>
+      <li class="todo-list"></li>
+      <li class="todo-list"></li>
+      <li class="todo-list"></li>
+      <li class="todo-list"></li>
+    </ul>
+    <form id="todo-form"></form>
     <script src="app.js"></script>
   </body>
 </html>
