--- a/DOM/ToDo/index.html
+++ b/DOM/ToDo/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1 id="title">Todo</h1>
     <a href="#" class="basic"></a>
     <ul>
-      <li class="todo-list"></li>
-      <li class="todo-list"></li>
-      <li class="todo-list"></li>
-      <li class="todo-list"></li>
+      <li class="todo-list">List</li>
+      <li class="todo-list">List</li>
+      <li class="todo-list">List</li>
+      <li class="todo-list">List</li>
     </ul>
     <form id="todo-form"></form>
     <script src="app.js"></script>
